--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/azure-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/azure-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Azure</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Sacha Styles</small>
 										<h3 class="img-hover-title"><a href="#">Azure - Beach Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -912,7 +912,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/amber-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/amber-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Amber</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Gláuber Sampaio</small>
 										<h3 class="img-hover-title"><a href="#">Amber - Cream Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -924,7 +924,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/interior-photography-collection-2-min.jpg" data-lightbox="image"><img src="img/interior-photography-collection-2-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Emerald Forest</small>
+										<small class="text-light ls1 t400 filterbooth-category">by David Kovalenko</small>
 										<h3 class="img-hover-title"><a href="#">Emerald Forest - Rich Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -937,7 +937,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/urban-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/urban-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Urban Vibes</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Austin Scherbarth</small>
 										<h3 class="img-hover-title"><a href="#">Urban Vibes - Film Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -950,7 +950,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/food-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/food-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Food</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Margo Brodowicz</small>
 										<h3 class="img-hover-title"><a href="#">Food - Adaptive Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -962,7 +962,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/standard-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/standard-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Standard</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Brooke Cagle</small>
 										<h3 class="img-hover-title"><a href="#">Standard - Strong Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -974,7 +974,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/interior-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/interior-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Interior</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Jj Mendez</small>
 										<h3 class="img-hover-title"><a href="#">Interior - Work Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -986,7 +986,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/night-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/night-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Night Owl</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Luke Stackpoole</small>
 										<h3 class="img-hover-title"><a href="#">Night Owl - Vintage Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -999,7 +999,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/monochrome-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/monochrome-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Monochrome</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Frederik Trovatten</small>
 										<h3 class="img-hover-title"><a href="#">Monochrome - Contrast Presets</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -1011,7 +1011,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/faces-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/faces-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Faces</small>
+										<small class="text-light ls1 t400 filterbooth-category">by Nathan Dumlao</small>
 										<h3 class="img-hover-title"><a href="#">Faces - Chimera Presets</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
@@ -1023,8 +1023,8 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/godlen-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/godlen-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Golden Hour</small>
-										<h3 class="img-hover-title"><a href="#">Golden Hour - Late Presets</a></h3>
+										<small class="text-light ls1 t400 filterbooth-category">by Logan Lambert</small>
+										<h3 class="img-hover-title"><a href="#">Golden Hour - Late Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
 								</div>
@@ -1035,8 +1035,8 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/moody-photography-collection-1-min.jpg" data-lightbox="image"><img src="img/moody-photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t400 filterbooth-category">Moody Vibes</small>
-										<h3 class="img-hover-title"><a href="#">Mody Vibess - Flawless Presets</a></h3>
+										<small class="text-light ls1 t400 filterbooth-category">by Annie Spratt</small>
+										<h3 class="img-hover-title"><a href="#">Mody Vibess - Flawless Preset</a></h3>
 										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
 									</div>
 								</div>
@@ -1047,9 +1047,9 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 								<div class="img-hover-card">
 									<a href="img/monochrome--photography-collection-1-min.jpg" data-lightbox="image"><img src="img/monochrome--photography-collection-1-min.jpg" alt=""></a>
 									<div class="img-hover-detail">
-										<small class="text-light ls1 t300">Monochrome</small>
-										<h3 class="img-hover-title"><a href="#">Monochrome - Mild Presets</a></h3>
-										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>
+										<small class="text-light ls1 t400 filterbooth-category">by Jan Fillem</small>
+										<h3 class="img-hover-title"><a href="#">Monochrome - Mild Preset</a></h3>
+										<div class="img-link"><a href="#"><i class="icon-line-arrow-right"></i></a></div>  
 									</div>
 								</div>
 							</div>
@@ -1078,7 +1078,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                             </div>
                             </div>
                             <div class="filterbooth-title-pic"><h3>Filterbooth Films</h3></div>
-                            <p class="lead">User friendly and easy to use, our presets give you the opportunity to change the face of your imagery and achieve better results.  </p>
+                            <p class="lead">User friendly and easy to use, our presets give you the opportunity to change the face of your imagery and achieve better results.</p>
                             <a class="btn btn--sm" href="#">
                                 <span class="btn__text">
                                     Download Now
@@ -1086,6 +1086,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                             </a>
                          
                         </div>
+                        
                     </div>
                     <!--end of row-->
                 </div>
