added google analytics

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <link rel="stylesheet" href="demos/photographer/photographer.css" type="text/css" />
         <link rel="stylesheet" href="css/style.css" type="text/css" />
         <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-  		<link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
+  	<link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
+
     </head>
     <body class="scroll-assist ">
         <a id="top"></a>
@@ -1399,5 +1400,15 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
       $(".twentytwenty-container-interior[data-orientation!='vertical']").twentytwenty({default_offset_pct: 0.5});
     });
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128291946-1"></script>
+    <script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-128291946-1');
+    </script>
+
     </body>
 </html>
