added meta tags for social

--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Filterbooth - Filterbooth - Bundle Of Presets For Professional Photos</title>
+        <title>Filterbooth™ - Set of premium photo presets for Lightroom.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    
+	<!-- Canonical SEO -->
+	<link rel="canonical" href="https://filterbooth.co/" />
+
+
+	<!--  Social tags      -->
+	<meta name="keywords" content="photography, lightroom, presets, free presets, premium presets, adobe, adobe presets, photoshop, edit photos, filters, photo filters, adobe photo filters">
+	<meta name="description" content="Filterbooth™ is a set of presets that will transform your regular photo content into premium content.">
+
+
+	<!-- Schema.org markup for Google+ -->
+	<meta itemprop="name" content="Filterbooth™ - Set of premium photo presets for Lightroom.">
+	<meta itemprop="description" content="Filterbooth™ is a set of presets that will transform your regular photo content into premium content.">
+
+	<meta itemprop="image" content="https://ph-files.imgix.net/b1e4da09-2d78-4487-8a33-bd6ef02a7f1b?auto=format">
+
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="product">
+	<meta name="twitter:site" content="@filterbooth">
+	<meta name="twitter:title" content="Filterbooth™ - Set of premium photo presets for Lightroom.">
+
+	<meta name="twitter:description" content="Filterbooth™ is a set of presets that will transform your regular photo content into premium content.">
+	<meta name="twitter:creator" content="@creativetim">
+	<meta name="twitter:image" content="https://ph-files.imgix.net/b1e4da09-2d78-4487-8a33-bd6ef02a7f1b?auto=format">
+
+
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Filterbooth™ - Set of premium photo presets for Lightroom." />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://filterbooth.co/" />
+	<meta property="og:image" content="https://ph-files.imgix.net/b1e4da09-2d78-4487-8a33-bd6ef02a7f1b?auto=format"/>
+	<meta property="og:description" content="Filterbooth™ is a set of presets that will transform your regular photo content into premium content." />
+	<meta property="og:site_name" content="FilterBooth™" />
+
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
