--- a/index.html
+++ b/index.html
@@ -134,32 +134,32 @@
                     <div class="row">
                         <div class="col-xs-2">
                             <a href="https://forbes.com" target="_blank">
-                            <img src="img/who/forbes.jpg" style="width:100px">
+                            <img src="img/forbes.jpg" style="width:100px">
                             </a>
                         </div>
                         <div class="col-xs-2">
                             <a href="https://entrepreneur.com" target="_blank">
-                            <img src="img/who/entrepreneur.jpg">
+                            <img src="img/entrepreneur.jpg">
                             </a>
                         </div>
                         <div class="col-xs-2">
                             <a href="https://producthunt.com" target="_blank">
-                            <img src="img/who/product-hunt.jpg">
+                            <img src="img/product-hunt.jpg">
                             </a>
                         </div>
                         <div class="col-xs-2">
                             <a href="https://awwwards.com" target="_blank">
-                            <img src="img/who/awwwards.png">
+                            <img src="img/awwwards.png">
                             </a>
                         </div>
                         <div class="col-xs-2">
                             <a href="https://creativebloq.com" target="_blank">
-                            <img src="img/who/creativebloq.png" style="width:120px; ">
+                            <img src="img/creativebloq.png" style="width:120px; ">
                             </a>
                         </div>
                         <div class="col-xs-2">
                             <a href="https://speckyboy.com" target="_blank">
-                            <img src="img/who/speckyboy.png" style="width:110px; ">
+                            <img src="img/speckyboy.png" style="width:110px; ">
                             </a>
                         </div>
                         
