--- a/index.html
+++ b/index.html
@@ -1180,6 +1180,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
                             <div class="pricing pricing-2 text-center">
+                            <img src="img/freebie.png">
                                 <h6>Freebie</h6>
                                 <div class="pricing__price">
                                     <span class="h1">Free</span>
@@ -1193,7 +1194,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                                     <li>• <b>5 Presets</b> for Lightroom™ / ACR</li>
                                     <li>• Intallation Guide</li>
                                     </ul>
-                                <a class="btn" href="https://gumroad.com/l/filterbooth-free">
+                                <a class="btn" href="#">
                                     <span class="btn__text">
                                         Download Now
                                     </span>
@@ -1203,8 +1204,10 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="pricing pricing-2 pricing--emphasise text-center">
+                             <img src="img/starter.png">
                                 <h6>Starter</h6>
                                 <div class="pricing__price">
+ <span class="pricing__dollar h3" style="text-decoration: line-through; opacity: 0.6; margin-right: 5px; font-weight: 400;">$155</span>
                                     <span class="pricing__dollar h5">$</span>
                                     <span class="h1">39</span>
                                 </div>
@@ -1214,11 +1217,11 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
 
                                 </p>
                                  <ul style="text-align: left; margin-top: -22px">
-                                  	<li>• 12 Professional Presets Categories</li>
+                                    <li>• 12 Professional Presets Categories</li>
                                     <li>• <b>60 Presets</b> for Lightroom™ / ACR</li>
-                                   	<li>• Intallation Guide</li>
+                                    <li>• Intallation Guide</li>
                                     </ul>
-                                <a class="btn btn--primary" href="https://gumroad.com/l/filterbooth-starter">
+                                <a class="btn btn--primary" href="#">
                                     <span class="btn__text">
                                         Buy Now
                                     </span>
@@ -1228,22 +1231,25 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="pricing pricing-2 text-center">
+                             <img src="img/professional.png">
                                 <h6>Professional</h6>
                                 <div class="pricing__price">
+                                 <span class="pricing__dollar h3" style="text-decoration: line-through; opacity: 0.6; margin-right: 5px; font-weight: 400;">$320</span>
                                     <span class="pricing__dollar h5">$</span>
                                     <span class="h1">89</span>
+                                
                                 </div>
                                 <hr>
                                 <p style="text-align: left; ">   
-                                    This extended package includes over 150+ amazing presets that will take your breath away. Right away. You will definitely have one or more choices for whatever picture you wish to edit! Go ahead and dive into our perfectly balanced world of presets with support from our team.
+                                    This extended package includes over 150+ amazing presets that will take your breath away. Right away. You will definitely have one or more choices for whatever picture you wish to edit! 
                                 </p>
                                  <ul style="text-align: left; margin-top: -22px">
                                  <li>• 12 Professional Presets Categories</li>
                                     <li>• <b>152 Presets</b> for Lightroom™ / ACR</li>
                                     <li>• Intallation Guide</li>
-                                    <li><b>• Support team will happily help you</b></li>
+                                    <li><b>• Support Team Will Happily Help</b></li>
                                     </ul>
-                                <a class="btn" href="https://gumroad.com/l/filterbooth-pro">
+                                <a class="btn" href="#">
                                     <span class="btn__text">
                                         Buy Now
                                     </span>
