--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                                     <li>• <b>5 Presets</b> for Lightroom™ / ACR</li>
                                     <li>• Intallation Guide</li>
                                     </ul>
-                                <a class="btn" href="#">
+                                <a class="btn" href="https://gumroad.com/l/filterbooth-free">
                                     <span class="btn__text">
                                         Download Now
                                     </span>
@@ -1221,7 +1221,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                                     <li>• <b>60 Presets</b> for Lightroom™ / ACR</li>
                                     <li>• Intallation Guide</li>
                                     </ul>
-                                <a class="btn btn--primary" href="#">
+                                <a class="btn btn--primary" href="https://gumroad.com/l/filterbooth-starter">
                                     <span class="btn__text">
                                         Buy Now
                                     </span>
@@ -1249,7 +1249,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                                     <li>• Intallation Guide</li>
                                     <li><b>• Support Team Will Happily Help</b></li>
                                     </ul>
-                                <a class="btn" href="#">
+                                <a class="btn" href="https://gumroad.com/l/filterbooth-pro">
                                     <span class="btn__text">
                                         Buy Now
                                     </span>
