--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 <!-- End Facebook Pixel Code -->
     </head>
     <body class="scroll-assist ">
+    <script>
+  fbq('track', 'ViewContent');
+</script>
+
+
         <a id="top"></a>
         
       
