--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="col-xs-6 text-right">
                             <a href="#pricing" class="btn btn--sm btn--rounded">
                                 <span class="btn__text">
-                                    Claim yours
+                                    DOWNLOAD NOW
                                 </span>
                             </a>
                         </div>
