--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Filterbooth™ - Set of premium photo presets for Lightroom.</title>
+        <title>Filterbooth - Film emulation presets for Lightroom</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    
 	<!-- Canonical SEO -->
@@ -11,7 +11,7 @@
 
 	<!--  Social tags      -->
 	<meta name="keywords" content="photography, lightroom, presets, free presets, premium presets, adobe, adobe presets, photoshop, edit photos, filters, photo filters, adobe photo filters">
-	<meta name="description" content="Filterbooth™ is a set of presets that will transform your regular photo content into premium content.">
+	<meta name="description" content="Filterbooth is a set of presets that will transform your regular photo content into premium content. Professional photos have never been easier to achieve.">
 
 
 	<!-- Schema.org markup for Google+ -->
