--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ src="https://www.facebook.com/tr?id=191955348397127&ev=PageView&noscript=1"
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
-                            <h6 style="font-size:0.825em;">Make your audience fall in love with your content</h6>
+                            <h6 style="font-size:0.825em;">Film emulation presets for Lightroom</h6>
                             <p class="lead">As developers and designers we try to keep up with your need of having awesome images as well as keeping them in the same style. Our bundles of presets are designed to meet and exceed your expectations no matter what you’re using them for. From website pictures to social media or presentation, they perfectly fit everywhere.
  
                             </p>
