--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
        <div class="notification pos-right pos-top col-xs-12" data-animation="from-top" data-autoshow="7000">
                 <div class="boxed boxed--sm promo-notification imagebg" data-overlay="3">
                     <div class="background-image-holder">
-                        <img alt="image" src="img/header4black.jpg" />
+                        <img alt="image" src="img/blackfriday.jpg" />
                     </div>
                     <div class="col-sm-12 text-center">
                         <h4 class="inline-block">Black Friday</h4>
