--- a/index.html
+++ b/index.html
@@ -1307,8 +1307,8 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                         <img alt="image" src="img/blackfriday.jpg" />
                     </div>
                     <div class="col-sm-12 text-center">
-                        <h4 class="inline-block">Black Friday</h4>
-                        <p class="lead inline-block">Use code <b style="text-decoration: underline;">bf18x</b> and save 50% right now!</p>
+                        <h4 class="inline-block">Cyber Monday</h4>
+                        <p class="lead inline-block">Use code <b style="text-decoration: underline;">cyber18</b> and save 25% right now!</p>
                         <a class="btn btn--sm" href="https://gumroad.com/l/filterbooth-pro">
                             <span class="btn__text">Enter Sale</span>
                         </a>
