--- a/index.html
+++ b/index.html
@@ -1304,11 +1304,11 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
        <div class="notification pos-right pos-top col-xs-12" data-animation="from-top" data-autoshow="7000">
                 <div class="boxed boxed--sm promo-notification imagebg" data-overlay="3">
                     <div class="background-image-holder">
-                        <img alt="image" src="img/blackfriday.jpg" />
+                        <img alt="image" src="img/header4.jpg" />
                     </div>
                     <div class="col-sm-12 text-center">
-                        <h4 class="inline-block">Cyber Monday</h4>
-                        <p class="lead inline-block">Use code <b style="text-decoration: underline;">cyber18</b> and save 25% right now!</p>
+                        <h4 class="inline-block">Winter Sale</h4>
+                        <p class="lead inline-block">Use code <b style="text-decoration: underline;">sale15x</b> and save $15 right now!</p>
                         <a class="btn btn--sm" href="https://gumroad.com/l/filterbooth-pro">
                             <span class="btn__text">Enter Sale</span>
                         </a>
