--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                                 <ul style="text-align: left; margin-top: -22px">
                                     <li>• <b>5 Presets</b> for Lightroom™ / ACR</li>
                                     <li>• Intallation Guide</li>
+                                    <li>• <b>5 Profiles</b> for Lightroom™ / ACR</li>
                                     </ul>
                                 <a class="btn" href="https://gumroad.com/l/filterbooth-free">
                                     <span class="btn__text">
@@ -1254,9 +1255,9 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                              <img src="img/professional.png">
                                 <h6>Professional</h6>
                                 <div class="pricing__price">
-                                 <span class="pricing__dollar h3" style="text-decoration: line-through; opacity: 0.6; margin-right: 5px; font-weight: 400;">$105</span>
+                                 <span class="pricing__dollar h3" style="text-decoration: line-through; opacity: 0.6; margin-right: 5px; font-weight: 400;">$115</span>
                                     <span class="pricing__dollar h5">$</span>
-                                    <span class="h1">89</span>
+                                    <span class="h1">99</span>
                                 
                                 </div>
                                 <hr>
@@ -1268,6 +1269,7 @@ Our Emerald Forest set of 13 presets will give your nature pictures colour depth
                                     <li>• <b>152 Presets</b> for Lightroom™ / ACR</li>
                                     <li>• Intallation Guide</li>
                                     <li><b>• Support Team Will Happily Help</b></li>
+                                    <li>• <b>152 Profiles</b> for Lightroom™ / ACR</li>
                                     </ul>
                                 <a class="btn" href="https://gumroad.com/l/filterbooth-pro">
                                     <span class="btn__text">
